--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <!-- We are adding the method in the form, which is triggered on submition -->
 <form
   class="mt-3 mx-3"
-  action="http://127.0.0.1:5000/ty"
+  action="http://127.0.0.1:5000/members"
   method="POST"
   style="
     background-color: rgb(116, 201, 244);
@@ -21,10 +21,10 @@
 
   <input type="submit" value="submit" />
 </form>
-<!-- <div class="criminals">
-  {% for criminal in result %}
+<div class="criminals">
+  {% for members in result %}
   <div
-    class="criminal"
+    class="members"
     style="
       background-color: antiqueWhite;
       width: 80%;
@@ -34,12 +34,8 @@
       padding: 20px;
     "
   >
-    <p>{{criminal.reward_text}}</p>
-    <p>{{criminal.aliases}}</p>
-    <p>{{criminal.sex}}</p>
-    <p>{{criminal.caution}}</p>
-    <p>{{criminal.description}}</p>
+    <p>{{members.name}}</p>
   </div>
   {% endfor %}
-</div> -->
+</div>
 {% endblock %}
