--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
   <input type="submit" value="submit" />
 </form>
 <div class="criminals">
-  {% for members in resp %}
+  {% for members in members %}
   <div
     class="members"
     style="
@@ -34,7 +34,7 @@
       padding: 20px;
     "
   >
-    <p>{{members.id}}</p>
+    <p>{{members.name}}</p>
   </div>
   {% endfor %}
 </div>
