change the create function to return the members table

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,12 @@
       margin-top: 20px;
       border-radius: 25px;
       padding: 20px;
+      display: flex;
+      justify-content: space-around;
     "
   >
     <p>{{members.name}}</p>
+    <p>{{members['alter-ego']}}</p>
   </div>
   {% endfor %}
 </div>
